# explainer

./: .gitignore  README.md  agg_attributions.py  agg_risk_attributions.py  check_data.py  eval_attr_global.py  eval_attributions.py  extract_baseline_attr.py  extract_transformers_attrs.py  postprocess_attrs.py  pyproject.toml  requirements.txt  train_baseline.py  train_transformers.py
config/: imdb.json  md_avgmaxnorm_simple_train.json  md_avgmaxnorm_train.json  new_baseline_simple_train.json  new_baseline_train.json
src/: attribution_aggregation.py  attribution_processing.py  configurator.py  create_imdb.py  data.py  data_processing.py  explainer.py  layer_utils.py  models.py  models_lrp.py
