[tool.poetry]
name = "explainer"
version = "0.1.0"
description = ""
authors = ["Oğuz Şerbetçi <oguz.serbetci@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120